<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Date"
        android:id="@+id/lblDate"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Day"
        android:id="@+id/lblDay"
        android:textColor="@color/colorPrimary"
        android:layout_alignTop="@+id/lblCode"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Temp"
        android:id="@+id/lblTemp"
        android:textColor="@color/colorPrimary"
        android:layout_below="@+id/lblDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="49dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/High"
        android:id="@+id/lblHighTemp"
        android:textColor="@color/colorPrimary"
        android:layout_above="@+id/lblTemp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Low"
        android:id="@+id/lblLowTemp"
        android:textColor="@color/colorPrimary"
        android:layout_below="@+id/lblDay"
        android:layout_alignLeft="@+id/lblHighTemp"
        android:layout_alignStart="@+id/lblHighTemp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Code"
        android:id="@+id/lblCode"
        android:textColor="@color/colorPrimary"
        android:layout_below="@+id/lblDate"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:visibility="invisible" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tempImg"
        android:src="@drawable/na"
        android:layout_alignTop="@+id/lblLowTemp"
        android:layout_alignRight="@+id/lblCode"
        android:layout_alignEnd="@+id/lblCode" />

</RelativeLayout>